# notto

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/errors/: mod.rs
src/finder/: mod.rs
src/io/: browser.rs  mod.rs
src/models/: bucket.rs  config.rs  front_matter.rs  mod.rs  note.rs
src/writer/: mod.rs
